1/1.07/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project042-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project042
  template:
    metadata:
      labels:
        app: project042
    spec:
      containers:
        - name: project042
          image: fajouianas/devops-with-kubernetes:1.07
