1/1.07/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project042-svc
spec:
  type: ClusterIP
  selector:
    app: project042
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3000
